--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "myprofile",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build", 
+    "preview": "vite preview",
+    "serve": "vite"
+  },
   "dependencies": {
-    "axios": "^1.13.2"
+    "axios": "^1.13.2", 
+    "vue": "^3.4.0",     
+    "vue-router": "^4.2.0" 
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.0", 
+    "vite": "^5.0.0"      
   }
 }
